[project]
name = "rl-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chex>=0.1.91",
    "datasets>=4.1.1",
    "einops>=0.8.1",
    "flax>=0.12.0",
    "grain>=0.2.12",
    "gymnasium[classic-control]>=1.2.1",
    "hydra-core>=1.3.2",
    "jax>=0.7.2",
    "jaxtyping>=0.3.2",
    "jumanji>=1.1.1",
    "matplotlib>=3.10.6",
    "optax>=0.2.6",
    "orbax>=0.1.9",
    "pillow>=11.3.0",
    "rlax>=0.1.8",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "tensorflow>=2.20.0",
    "trackio>=0.4.1",
    "transformers>=4.56.2",
]

[dependency-groups]
dev = ["ipykernel>=6.30.1"]
